@@ -42,7 +42,7 @@
 
 /* Make sure WINAPI is defined
  */
-#if defined( HAVE_WINDOWS_H ) || defined( _MSC_VER ) || defined( __BORLANDC__ )
+#if defined( _MSC_VER ) || defined( __BORLANDC__ ) || defined( __MINGW32_VERSION )
 #define WIN32_LEAN_AND_MEAN
 
 #include <windows.h>
